--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -69,7 +69,7 @@
                       <div class="col-4 col-sm-4">
                         <div class="split-list text-center">
                             <span style="font-size:30px" class="fa fa-edit"></span>
-                            <a href="javascript:void(0);" routerLink="/solicitar-contrato"><h6 style="font-size:12px" class="info-label">Solicitar Contrato</h6></a>
+                            <a href="javascript:void(0);"  [(routerLink)]="ruta2"><h6 style="font-size:12px" class="info-label">Solicitar Contrato</h6></a>
                         </div>
                       </div>
                       <div class="col-4 col-sm-4">
