con vistas alarma y settings, antes de las notif

--- a/src/app/calcularirs/calcularirs.page.html
+++ b/src/app/calcularirs/calcularirs.page.html
@@ -32,82 +32,87 @@
             
             <div class="form-row-group with-icons">
               
-                <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back2">Nombre Solicitante</span></div>
-                <div class="form-divider"></div>
+             
+                <h4 class="title-main font-16 font-bold ">Nombre Solicitante</h4>
+           
                 <div class="form-row no-padding">
                     <i class="fa fa-user"></i>
                     <input type="text" id="nombre_solicitante" name="nombre_solicitante" class="form-element" required placeholder="Nombre Solicitante" value="">
                 </div>
-                <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back2">Inmobiliaria</span></div>
-                <div class="form-divider"></div>
+              
+                <h4 class="title-main font-16 font-bold ">Inmobiliaria</h4>
+              
              
                 <div class="form-row no-padding">
                     <i class="fa fa-building-o"></i>
                     <input type="text" id="inmobiliaria_solicitante" name="inmobiliaria_solicitante" class="form-element" required placeholder="Inmobiliaria" value="">
                 </div>
-                <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back2">Email</span></div>
-                <div class="form-divider"></div>
+              
+                <h4 class="title-main font-16 font-bold ">Email</h4>
+              
                 <div class="form-row no-padding">
                     <i class="fa fa-envelope"></i>
                     <input type="text" id="email_solicitante" name="email_solicitante" class="form-element" required placeholder="Email" value="">
                 </div>
-                <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back2">Teléfono</span></div>
-                <div class="form-divider"></div>
+          
+                <h4 class="title-main font-16 font-bold ">Teléfono</h4>
+            
                 <div class="form-row no-padding">
                     <i class="fa fa-phone"></i>
                     <input type="text" id="telefono_solicitante" name="telefono_solicitante" class="form-element" required placeholder="Teléfono" value="">
                 </div>
-                <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back2">Precio de Venta</span></div>
-                <div class="form-divider"></div>
+          
+                <h4 class="title-main font-16 font-bold ">Precio de Venta</h4>
+           
                 <div class="form-row no-padding">
                     <i class="fa fa-money"></i>
                     <input type="text" id="precio_venta" name="precio_venta" class="form-element" required placeholder="Precio Venta" value="">
                 </div>
-                <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back2">Fecha de Venta</span></div>
-                <div class="form-divider"></div>
+             
+                <h4 class="title-main font-16 font-bold ">Fecha de Venta</h4>
+               
                 <div class="form-row no-padding">
                     <i class="fa fa-calendar"></i>
                     <input type="date" id="fecha_venta" name="fecha_venta" class="form-element" required placeholder="Fecha de Venta" value="">
                 </div>
-                <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back2">Precio Adjudicación</span></div>
-                <div class="form-divider"></div>
+             
+                <h4 class="title-main font-16 font-bold ">Precio Adjudicación</h4>
+             
                 <div class="form-row no-padding">
                   
                     <i class="fa fa-money"></i>
                     <input type="text" id="precio_adjudicacion" name="precio_adjudicacion" class="form-element" required placeholder="Precio de Adjudicación" value="">
                 </div>
-                <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back2">Fecha de Adjudicación</span></div>
-                <div class="form-divider"></div>
+             
+                <h4 class="title-main font-16 font-bold ">Fecha de Adjudicación</h4>
+              
                 <div class="form-row no-padding">
                     <i class="fa fa-calendar"></i>
-                    <input type="date" id="fecha_adjudicacion" name="fecha_adjudicacion" class="form-element" required placeholder="Fecha de Adjudicación" value="">
+                    <input type="date" id="fecha_adjudicacion" name="fecha_adjudicacion" class="form-element" required placeholder="dd/mm/aaaa" value="">
                 </div>
-                <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back2">Numero de Propietarios</span></div>
-                <div class="form-divider"></div>
+                <div class="form-row-group with-icons">
+                    <div class="form-row no-padding">
+                        <i class="fa fa-calendar"></i>
+                        <input type="time" id="fecha_probable" name="fecha_probable" class="form-element" required placeholder="Fecha Probable de Firma (Opcional)" value="">
+                    </div>
+                </div>
+                <h4 class="title-main font-16 font-bold ">Numero de Propietarios</h4>
+               
              
                 <div class="form-row no-padding">
                     <i class="fa fa-users"></i>
                     <input type="text" id="numero_propietarios" name="numero_propietarios" class="form-element" required placeholder="Nº de Propietarios" value="">
                 </div>
-                <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back2">Propietarios en Sociedad Conyugal</span></div>
-                <div class="form-divider"></div>
+             
+                <h4 class="title-main font-16 font-bold ">Propietarios en Sociedad Conyugal</h4>
+             
                 <div class="form-row no-padding">
                     <i class="fa fa-users"></i>
                     <input type="text" id="numero_propietarios_conyugal" name="numero_propietarios_conyugal" class="form-element" required placeholder="Nº en Sociedad Conyugal" value="">
                 </div>
-                <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back2">Propietarios Exentos de ISR</span></div>
-                <div class="form-divider"></div>
+             
+                <h4 class="title-main font-16 font-bold ">Propietarios Exentos de ISR</h4>
+               
                 <div class="form-row no-padding">
                     <i class="fa fa-users"></i>
                     <input type="text" id="numero_propietarios_exentan" name="numero_propietarios_exentan" class="form-element" required placeholder="Nº que exentan ISR" value="">
