con cors enabled

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -43,7 +43,20 @@
                 </swiper>
             </section>
           
-          
+            <section class="container">
+                <div class="content"> 
+                    <!-- <h4 class="title-main">Balance Split</h4> -->
+                <div class="c-panel">
+                    
+                    <div class="form-row"  style="text-align: center">
+            
+                
+                        <a style="text-align: center" href="Javascript:void(0);" (click)="simpleNotif()" class="button circle inline red">notif</a> 
+                    </div>
+            
+                </div>
+                </div>
+            </section>
             <section class="container">
                 <div class="content"> 
                   <!-- <h4 class="title-main">Balance Split</h4> -->
@@ -135,7 +148,7 @@
                 </div>
               </div>
             </section>
-  
+          
          
             <app-noticias></app-noticias>
             <app-footer></app-footer>
