--- a/src/app/members/alertas/alertas.page.html
+++ b/src/app/members/alertas/alertas.page.html
@@ -54,10 +54,10 @@
                     <tbody *ngIf="polizas?.length != 0">
                         <tr id="dttr_{{ alerta.id }}" *ngFor="let alerta of alertas">
                       
-                            <td class="td_{{ alerta.id }}">{{ alerta.id }}</td>
-                            <td class="td_{{ alerta.id }}">{{ alerta.id }}</td>
-                            <td class="td_{{ alerta.id }}">{{ alerta.id }}</td>
-                            <td class="td_{{ alerta.id }}">{{ alerta.id }}</td>
+                            <td class="td_{{ alerta.id }}">{{ alerta.fecha }}</td>
+                            <td class="td_{{ alerta.id }}">{{ alerta.titulo }}</td>
+                            <td class="td_{{ alerta.id }}">{{ alerta.descripcion }}</td>
+                            <td class="td_{{ alerta.id }}"></td>
                        
                         </tr>
                     </tbody>
