con conexion a la api remota probada y antes de las correcciones 1 de eduardo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ion-app   >
+<ion-app  class="no-scroll"  >
           
       <ion-router-outlet></ion-router-outlet>
       <ng-http-loader></ng-http-loader>
