--- a/src/app/calcularcredito/calcularcredito.page.html
+++ b/src/app/calcularcredito/calcularcredito.page.html
@@ -71,7 +71,7 @@
                 <div class="form-divider"></div>
 
                 <div class="form-row">
-                    <a style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" (click)="solicitarCredito()" class="button circle block">Solicitar Crédito</a>
+                    <a style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" (click)="solicitarCredito($event)" class="button circle block">Solicitar Crédito</a>
                 </div>
 
           </section>      
