--- a/src/app/members/crearsolicitud/crearsolicitud.page.html
+++ b/src/app/members/crearsolicitud/crearsolicitud.page.html
@@ -171,7 +171,7 @@
                 <div class="form-divider"></div>
 
                 <div class="form-row">
-                    <a style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" (click)="enviarSugerencia()" class="button circle block">Enviar Solicitud</a>
+                    <a style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" (click)="crearSolicitud($event)" class="button circle block">Enviar Solicitud</a>
                 </div>
 
           </section>      
