--- a/src/app/solicitarcontrato/solicitarcontrato.page.html
+++ b/src/app/solicitarcontrato/solicitarcontrato.page.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper ">
       
-    <div class="wrapper-inline" (scroll)="doSomethingOnScroll($event)">
+    <div class="wrapper-inline" >
         <app-menu></app-menu>
         <app-quickmenu title="{{title}}"></app-quickmenu>
       <!-- Page content start -->
@@ -171,7 +171,7 @@
                 <div class="form-divider"></div>
 
                 <div class="form-row">
-                    <a style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" (click)="enviarSugerencia()" class="button circle block">Enviar Solicitud</a>
+                    <a style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" (click)="solicitarContrato($event)" class="button circle block">Enviar Solicitud</a>
                 </div>
 
           </section>      
